objects/Excise_Tax_Table__c.object
<CustomObject>
    <description>A reference table to support IIP calculations.</description>
    <fields>
        <fullName>ETT_Beverage_Code_Description__c</fullName>
        <label>ETT: Beverage Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETT_Beverage_Code__c</fullName>
        <label>ETT: Beverage Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETT_Excise_Tax_Rate_Per_Gallon__c</fullName>
        <label>Excise Tax Rate Per Gallon</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ETT_Excise_Tax_Rate_Per_Liter__c</fullName>
        <label>Excise Tax Rate Per Liter</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Excise Tax Table</label>
    <nameField>
        <label>Excise Tax Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excise Tax Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>